--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nsfw-demo",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "node server.js"
@@ -13,6 +14,7 @@
     "@tensorflow/tfjs": "^4.2.0",
     "@tensorflow/tfjs-node": "^4.2.0",
     "express": "^4.18.2",
+    "file-type": "^18.2.0",
     "jpeg-js": "^0.4.4",
     "multer": "^1.4.5-lts.1",
     "nsfwjs": "^2.4.2",
