--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jpeg-js": "^0.4.4",
     "multer": "^1.4.5-lts.1",
     "nsfwjs": "^2.4.2",
-    "pngjs": "^6.0.0"
+    "pngjs": "^6.0.0",
+    "sharp": "^0.31.3"
   }
 }
